none: lots of cleanup and added comments.